--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "babel-loader": "^8.2.5",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "vue-loader": "^15.10.0",
     "vue-template-compiler": "^2.6.14"
   },
